# support-ticket-env

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  support_env.py
.ipynb_checkpoints/: inference-checkpoint.py  openenv-checkpoint.yaml  pyproject-checkpoint.toml  support_env-checkpoint.py
server/: app.py
server/.ipynb_checkpoints/: app-checkpoint.py
