[project]
name = "support-ticket-env"
version = "0.1.0"
description = "OpenEnv customer support simulation"
authors = [{ name = "Mahak Choudhari" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",          
    "openenv==0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"